# DASH

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EME_ARCHITECTURE.md  LICENSE  README.md  feasibility.md  rust-toolchain.toml
.github/: SECURITY_POLICY.md  dependabot.yml
.github/workflows/: fuzz-nightly.yml  release.yml  rust.yml  sdks.yml  security.yml
deploy/container/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
deploy/container/scripts/: entrypoint.sh  healthcheck.sh
deploy/helm/dash/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/k8s/: 00-namespace.yaml  10-config.yaml  11-secrets.yaml  20-retrieval.yaml  30-ingestion.yaml  40-ingress.yaml  50-networkpolicy.yaml  60-pdb.yaml  70-hpa.yaml  kustomization.yaml
deploy/systemd/: dash-ingestion.service  dash-retrieval.service  dash-segment-maintenance.service  ingestion.env.example  retrieval.env.example  segment-maintenance.env.example
docs/: comparison.md  quickstart.md  security-checklist.md  supply-chain.md  threat-model.md
docs-site/: README.md  mkdocs.yml  requirements.txt
docs-site/docs/: index.md  quickstart.md
docs-site/docs/about/: changelog.md  contributing.md  index.md  license.md  security.md
docs-site/docs/concepts/: architecture.md  data-model.md  index.md  multi-tenancy.md  persistence.md  security.md  why-dash.md
docs-site/docs/guides/: embeddings.md  index.md  ingest.md  retrieve.md  sdks.md
docs-site/docs/operations/: backup.md  deploy.md  index.md  observability.md  scaling.md  security-audit.md
docs-site/docs/reference/: api.md  architecture-decisions.md  benchmarks.md  configuration.md  index.md
docs/architecture/: eme-architecture.md
docs/benchmarks/: evaluation-protocol.md  performance.md
docs/benchmarks/history/: benchmark-history.csv  benchmark-history.md
docs/benchmarks/scorecards/: 2026-02-17-hybrid-prefilter-scorecard.md  2026-02-17-hybrid-profile-scorecard.md  2026-02-17-initial-quality-scorecard.md  20260217-122818-milestone-benchmark-trend-large.md  20260217-122818-milestone-benchmark-trend-smoke.md  20260217-123159-milestone-benchmark-trend-v2-large.md  20260217-123159-milestone-benchmark-trend-v2-smoke.md  20260217-123427-release-20260217-123427-smoke.md  20260217-123930-ci-toggle-smoke.md  20260217-132619-sanity-post-concurrency-smoke.md
docs/execution/: dash-10-phase-build-blueprint.md  dash-critical-analysis-checklist.md  dash-full-architecture-and-goals.md  dash-production-runbook.md  dash-real-database-status.md  dash-release-checklist.md  dash-security-threat-model-signoff.md  dash-shard-replication-p0.md  dash-startup-env-matrix.md  eme-master-plan.md  phase-0-backlog.md
docs/operations/: benchmarking.md  pgo.md  services.md
docs/plans/: 2026-06-13-dash-modernization-roadmap.md  2026-06-13-redb-persistence-design.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_jwt.rs  fuzz_openai_embeddings.rs  fuzz_ranking.rs  fuzz_wal_parse.rs
pkg/: README.md
pkg/auth/: Cargo.toml
pkg/auth/src/: lib.rs
pkg/embeddings/: Cargo.toml
pkg/graph/: Cargo.toml
pkg/ranking/: Cargo.toml
pkg/schema/: Cargo.toml
pkg/store/: Cargo.toml
pkg/store/src/: ann.rs  disk.rs  gpu.rs  lib.rs  metrics.rs  wal.rs
pkg/store/tests/: integration_retrieval.rs
scripts/: auth_revocation_drill.sh  backup_state_bundle.sh  benchmark_ingest_wal_durability.sh  benchmark_transport_concurrency.sh  benchmark_trend.sh  buddy.sh  build-pgo.sh  cargo-audit.sh  check-bench-regression.sh  ci.sh  deploy_container.sh  deploy_systemd.sh  failover_drill.sh  incident_simulation_gate.sh  package_release.sh  phase11_core_staging_gate.sh  phase4_closure_checklist.sh  phase4_long_soak.sh  phase4_long_soak_ctl.sh  phase4_scale_proof.sh  phase4_tierb_rehearsal.sh  phase4_tierc_rehearsal.sh  phase4_tierd_rehearsal.sh  rebalance_drill.sh  recovery_drill.sh  release_candidate_gate.sh  restore_state_bundle.sh  secret-scan.sh  security_signoff_gate.sh  slo_guard.sh  verify_audit_chain.sh
sdks/: LIVE_INTEGRATION_TESTS.md
sdks/csharp/: CHANGELOG.md  Dash.sln  Directory.Build.props  README.md
sdks/go/: LICENSE  README.md  client.go  client_test.go  embeddings.go  embeddings_test.go  errors.go  errors_test.go  go.mod  live_integration_test.go  openai_compat.go  openai_compat_test.go  retrieve.go  retrieve_test.go  testdata_test.go  types.go
sdks/java/: README.md  pom.xml
sdks/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
sdks/python/: README.md  pyproject.toml
sdks/python/src/dash/: __init__.py  async_client.py  client.py  errors.py  types.py
sdks/python/tests/: __init__.py  conftest.py  test_async_client.py  test_client.py  test_live_integration.py  test_openai_compat.py
sdks/typescript/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
services/: README.md
services/common/: Cargo.toml
services/control-plane/: Cargo.toml
services/control-plane/src/: lib.rs  main.rs
services/indexer/: Cargo.toml
services/indexer/src/: lib.rs
services/ingestion/: Cargo.toml
services/ingestion/src/: api.rs  extraction.rs  lib.rs  main.rs  transport.rs  transport_axum.rs
services/ingestion/src/transport/: audit.rs  authz.rs  config.rs  document_parser_debug.rs  http.rs  ingest_routes.rs  json.rs  payload.rs  persistence.rs  placement_debug.rs  placement_routing.rs  read_routes.rs  replication.rs  request.rs  routes.rs  segment_runtime.rs  server_runtime.rs  tests.rs
services/ingestion/tests/: transport_http.rs
services/metadata-router/: Cargo.toml
services/retrieval/: Cargo.toml
services/retrieval/src/: api.rs  lib.rs  main.rs  openai_embeddings.rs  transport.rs  transport_axum.rs
services/retrieval/src/api/: result_projection.rs  segment_storage.rs
services/retrieval/src/transport/: audit.rs  authz.rs  debug_render.rs  http.rs  payload.rs
services/retrieval/tests/: end_to_end.rs  transport_http.rs
tests/benchmarks/: Cargo.toml
tests/benchmarks/benches/: criterion_benches.rs
tests/benchmarks/src/: main.rs  perf_bench.rs
tools/buddy-chat/: Cargo.toml
(+133 files in other folders)
