[workspace]
members = [
  "pkg/auth",
  "pkg/schema",
  "pkg/ranking",
  "pkg/graph",
  "pkg/store",
  "tools/buddy-chat",
  "tools/dashctl",
  "services/control-plane",
  "services/ingestion",
  "services/retrieval",
  "services/indexer",
  "services/metadata-router",
  "tests/benchmarks",
]
resolver = "2"
