[workspace]
members = [
  "pkg/auth",
  "pkg/embeddings",
  "pkg/schema",
  "pkg/ranking",
  "pkg/graph",
  "pkg/store",
  "services/control-plane",
  "services/ingestion",
  "services/retrieval",
  "services/indexer",
  "services/metadata-router",
  "tests/benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
jsonwebtoken = "10"
base64 = "0.22"
redb = "4"
bincode = "3.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
sha2 = "0.11"
hex = "0.4"
usearch = { version = "2", default-features = false }
parking_lot = "0.12"
