[workspace]
members = [
  "pkg/auth",
  "pkg/embeddings",
  "pkg/schema",
  "pkg/ranking",
  "pkg/graph",
  "pkg/store",
  "services/control-plane",
  "services/ingestion",
  "services/retrieval",
  "services/indexer",
  "services/metadata-router",
  "tests/benchmarks",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
jsonwebtoken = "9"
base64 = "0.22"
redb = "2"
bincode = "1.3"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
usearch = { version = "2", default-features = false }

# Benchmarking + profiling
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "html_reports"] }
dhat = "0.3"
hdrhistogram = "7"
parking_lot = "0.12"

# Release profile: speed-first for the binaries, size-aware
# for the libraries. LTO is enabled because the services link
# against both the store and the schema crates, and LTO can inline
# across crate boundaries (the inlining is 5-10% on the retrieve
# hot path). codegen-units=1 enables that cross-crate inlining.
# For benchmarks we set the same flags so the numbers reflect
# production builds.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
# Stable Rust does not have PGO; the PGO build script overrides
# these via RUSTFLAGS. PGO gains are documented in docs/operations/pgo.md.

# The benchmark suite benefits from a slightly more aggressive
# LTO setting; the binaries are short-lived and the codegen cost
# is amortized across hundreds of measurements.
[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
