[package]
name = "store"
version = "0.1.0"
edition = "2024"

[features]
# Historical GPU compute path. The code is feature-gated so it can be
# re-enabled without rewriting the call sites. With the feature off (default),
# the wgpu/kosmic backends are compiled out and the store falls back to the
# hand-rolled CPU similarity implementation in `lib.rs` (cosine/dot/L2).
gpu-backend = []

[dependencies]
schema = { path = "../schema" }
ranking = { path = "../ranking" }
graph = { path = "../graph" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
redb = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
usearch = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
