[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "dash-py"
version = "0.1.0"
description = "Idiomatic Python client for the DASH retrieval engine"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "DASH Contributors" },
]
keywords = [
    "dash",
    "embeddings",
    "retrieval",
    "rag",
    "openai-compatible",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.32.5",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/dash-retrieval/dash"

[tool.hatch.build.targets.wheel]
packages = ["src/dash"]

[tool.hatch.build.targets.sdist]
include = [
    "src/dash",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
]
asyncio_mode = "auto"
