[package]
name = "control-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
auth = { path = "../../pkg/auth" }
metadata-router = { path = "../metadata-router" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
