[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[features]
default = []
async-transport = ["dep:axum", "dep:tokio"]

[dependencies]
schema = { path = "../../pkg/schema" }
store = { path = "../../pkg/store" }
indexer = { path = "../indexer" }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"], optional = true }
