[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[features]
default = []
async-transport = ["dep:axum", "dep:tokio"]

[dependencies]
auth = { path = "../../pkg/auth" }
schema = { path = "../../pkg/schema" }
store = { path = "../../pkg/store" }
indexer = { path = "../indexer" }
metadata-router = { path = "../metadata-router" }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"], optional = true }
