[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[features]
default = []
model-extraction-adapter = []

[dependencies]
auth = { path = "../../pkg/auth" }
schema = { path = "../../pkg/schema" }
store = { path = "../../pkg/store" }
indexer = { path = "../indexer" }
metadata-router = { path = "../metadata-router" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
