[package]
name = "retrieval"
version = "0.1.0"
edition = "2024"

[dependencies]
auth = { path = "../../pkg/auth" }
schema = { path = "../../pkg/schema" }
store = { path = "../../pkg/store" }
graph = { path = "../../pkg/graph" }
indexer = { path = "../indexer" }
metadata-router = { path = "../metadata-router" }
embeddings = { path = "../../pkg/embeddings" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
signal-hook = { workspace = true }
dash-common = { path = "../common" }

[dev-dependencies]
serde_json = { workspace = true }
